--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Nate Baker Portfolio</title>
+  <title>nate-baker.com</title>
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
